feat: use conventional commit message for ci task

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -47,3 +47,4 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           file_pattern: './badge.svg'
+          commit_message: 'chore(ci): update results badge'
